<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HouseDetails">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ettol"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:hint="@string/tol"
            android:inputType="text"
            android:maxLength="2"
            android:singleLine="true"
            android:textColor="#ff000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gharno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tol"
        app:layout_constraintStart_toStartOf="@+id/tol"
        app:layout_constraintTop_toBottomOf="@+id/tol">

        <EditText
            android:id="@+id/etgharno"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:hint="@string/houseno"
            android:inputType="text"
            android:maxLength="2"
            android:singleLine="true"
            android:textColor="#ff000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/typeofhouse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gharno" />

    <RadioGroup
        android:id="@+id/housetype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/kachi" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/halfpakki" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/pakki" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aboutland"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/housetype">

        <EditText
            android:id="@+id/etaboutland"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:hint="@string/aboutland"
            android:inputType="text"
            android:maxLength="10"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvuploadvdcimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/vdc_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutland" />


    <com.oswaldogh89.picker.ImagePicker
        android:id="@+id/wardimgpicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvuploadvdcimage">

    </com.oswaldogh89.picker.ImagePicker>

    <Button
        android:id="@+id/backBT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wardimgpicker" />

    <Button
        android:id="@+id/nextBT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wardimgpicker" />

</androidx.constraintlayout.widget.ConstraintLayout>