<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    tools:context=".Personaldetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/pdimagelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ownerimage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.oswaldogh89.picker.ImagePicker
            android:id="@+id/pdpicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdimagelabel">

        </com.oswaldogh89.picker.ImagePicker>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/houseowner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pdpicker"
            app:layout_constraintTop_toBottomOf="@+id/pdpicker">

            <EditText
                android:id="@+id/ethouseowner"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:hint="@string/houseowner"
                android:inputType="text"
                android:maxLength="2"
                android:singleLine="true"
                android:textColor="#ff000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pdage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/houseowner">

            <EditText
                android:id="@+id/et_pdage"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true"
                android:textColor="#ff000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pdreligion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/pdage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/pdage"
            app:layout_constraintWidth_percent="0.5">

            <EditText
                android:id="@+id/et_pdreligion"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:hint="@string/religion"
                android:inputType="text"
                android:maxLength="2"
                android:singleLine="true"
                android:textColor="#ff000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pdedu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdage"
            app:layout_constraintWidth_percent="0.5">

            <EditText
                android:id="@+id/et_pd_edu"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:hint="@string/eduqualifi"
                android:inputType="text"
                android:maxLength="2"
                android:singleLine="true"
                android:textColor="#ff000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pd_occupation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="198dp"
            app:layout_constraintBottom_toBottomOf="@+id/pdedu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pdedu"
            app:layout_constraintWidth_percent="0.5">

            <EditText
                android:id="@+id/et_pd_occupation"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:hint="@string/occupation"
                android:inputType="text"
                android:maxLength="2"
                android:singleLine="true"
                android:textColor="#ff000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pdfathername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pd_occupation">

            <EditText
                android:id="@+id/et_pdfathername"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:hint="@string/fathername"
                android:inputType="text"
                android:maxLength="2"
                android:singleLine="true"
                android:textColor="#ff000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pdmother"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/pdfathername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pdfathername"
            app:layout_constraintWidth_percent="0.5">

            <EditText
                android:id="@+id/et_pd_mothername"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:hint="@string/mothername"
                android:inputType="text"
                android:maxLength="2"
                android:singleLine="true"
                android:textColor="#ff000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pdgrandfather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdfathername"
            app:layout_constraintWidth_percent="0.5">

            <EditText
                android:id="@+id/et_pd_grandfather"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:hint="@string/mothername"
                android:inputType="text"
                android:maxLength="2"
                android:singleLine="true"
                android:textColor="#ff000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pdspouse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/pdgrandfather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pdgrandfather"
            app:layout_constraintWidth_percent="0.5">

            <EditText
                android:id="@+id/et_pd_spouse"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:hint="@string/spousename"
                android:inputType="text"
                android:maxLength="2"
                android:singleLine="true"
                android:textColor="#ff000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/isabroad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdspouse" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/npyes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/npno" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spouse_profession"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <EditText
                android:id="@+id/et_spouse_profession"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:hint="@string/occupation"
                android:inputType="text"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/abroadfrom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spouse_profession">

            <EditText
                android:id="@+id/et_pd_spouse_from"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:hint="@string/abroadfrom"
                android:inputType="text"
                android:maxLength="10"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/backBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abroadfrom" />

        <Button
            android:id="@+id/nextBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abroadfrom" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>