<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/gradient_animation"
    android:padding="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="12dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/nepalgovt"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.lakpa.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/white"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textfield"
            style="@style/Widget.lakpa.TextInputLayout"
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/white"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            android:hint="@string/pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.lakpa.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


</ScrollView>